--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
+        "eslint": "^8.24.0",
         "prettier": "^2.7.1",
         "typescript": "^4.8.4"
     }
