feat: Add models and permissions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "noFallthroughCasesInSwitch": true,
         "alwaysStrict": true,
         "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "lib": ["ES2015"]
     }
 }
